--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#ff3333",
-    "activityBar.background": "#ff3333",
+    "activityBar.activeBackground": "#7f5fd5",
+    "activityBar.background": "#7f5fd5",
     "activityBar.foreground": "#e7e7e7",
     "activityBar.inactiveForeground": "#e7e7e799",
-    "activityBarBadge.background": "#00df00",
+    "activityBarBadge.background": "#de9a81",
     "activityBarBadge.foreground": "#15202b",
     "commandCenter.border": "#e7e7e799",
-    "sash.hoverBorder": "#ff3333",
-    "statusBar.background": "#ff0000",
+    "sash.hoverBorder": "#7f5fd5",
+    "statusBar.background": "#5f37ca",
     "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#ff3333",
-    "statusBarItem.remoteBackground": "#ff0000",
+    "statusBarItem.hoverBackground": "#7f5fd5",
+    "statusBarItem.remoteBackground": "#5f37ca",
     "statusBarItem.remoteForeground": "#e7e7e7",
-    "titleBar.activeBackground": "#ff0000",
+    "titleBar.activeBackground": "#5f37ca",
     "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.inactiveBackground": "#ff000099",
+    "titleBar.inactiveBackground": "#5f37ca99",
     "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#f00"
+  "peacock.color": "#5f37ca"
 }
