--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-toast-notifications": "^3.4.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "react-redux": "^9.1.0",
