--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "react-redux": "^9.1.0",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "expo-sqlite": "~13.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
