--- a/app.json
+++ b/app.json
@@ -18,13 +18,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/favicon.jpeg",
         "backgroundColor": "#ffffff"
       },
       "package": "com.manuelforneri.taskapp"
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.jpeg"
     },
     "plugins": ["expo-font"],
     "extra": {
