--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^2.1.0",
-    "expo": "~50.0.4",
+    "expo": "^51.0.38",
     "expo-font": "~11.10.2",
     "expo-image-picker": "~14.7.1",
     "expo-sqlite": "~13.2.2",
